samples/_failures_safe/1761314117_4e44e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57845650.c: In function ‘main’:
./samples/SAFE/__tmp_57845650.c:197:25: error: missing terminating " character
  197 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_57845650.c:197:9: error: expected expression at end of input
  197 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_57845650.c:197:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_57845650.c:197:9: error: expected declaration or statement at end of input
